fix(directory): fixed text overflow

--- a/directory/src/scss/_page_base.scss
+++ b/directory/src/scss/_page_base.scss
@@ -161,6 +161,7 @@
     transition: transform cubic-bezier(0.65, 0.05, 0.36, 1) 0.3s;
 
     .option {
+      white-space: nowrap;
       pointer-events: none;
       position: relative;
       transform: translate3d(0, 0, 1px);
@@ -302,4 +303,9 @@
       }
     }
   }
+}
+
+.no-overflow {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
